# convex_defect

./: .gitignore  README.md  pyproject.toml
docs/: convex_defect_theory.md
examples/: convex_defect_demo.py
src/convex_defect/: __init__.py  cli.py  defect_density.py  gradio_app.py  holonomy_accumulator.py  multi_scale_field.py  relaxation_dynamics.py  simulator.py
tests/: test_convex_defect.py
