[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "convex-defect"
version = "0.1.0"
description = "Frequency-dependent topological convex defect density with κ-tuned fractal relaxation (mystery / flux_trajectoid extension)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kinaar8340" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
demo = ["gradio>=4.0"]

[project.scripts]
convex-defect = "convex_defect.cli:main"

[project.urls]
Homepage = "https://github.com/kinaar8340/convex_defect"
Repository = "https://github.com/kinaar8340/convex_defect"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
